--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <div id="place"></div>
 <div id="state"></div>
 <div id="time"></div>
- <span>ತಾಪಮಾನ: <span> id="temperature"> </span> ಡಿಗ್ರಿಗಳು </span><br>
+ <span>ತಾಪಮಾನ: <span id="temperature">  </span> ಡಿಗ್ರಿಗಳು </span><br>
  ಆರ್ದ್ರತೆ <div id="humidity"></div>
 <div id="observedAt"></div>
  <!-- main banner -->
