--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 <div id="state"></div>
 <div id="time"></div>
  <span>ತಾಪಮಾನ: <span id="temperature">  </span> ಡಿಗ್ರಿಗಳು </span><br>
- ಆರ್ದ್ರತೆ <div id="humidity"></div>
-<div id="observedAt"></div>
+ <span>ಆರ್ದ್ರತೆ: <span id="humidity"></span></span><br>
+ <span> ನಿರೀಕ್ಷಿಸಿದ ಸಮಯ: <span id="observedAt"></span></span> 
  <!-- main banner -->
  <section class="bgimage" id="home">
   <div class="container-fluid">
