--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
   <title>Portfolio Website-Brad</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -43,13 +44,14 @@
     </div>
 </nav>
 <div style="color: black;" id="catFact"></div>
-  
+  <div id="wd">
   <div id="place"></div>
 <div id="state"></div>
 <div id="time"></div>
  <span>ತಾಪಮಾನ: <span id="temperature">  </span> ಡಿಗ್ರಿಗಳು </span><br>
  <span>ಆರ್ದ್ರತೆ: <span id="humidity"></span></span><br>
  <span> ನಿರೀಕ್ಷಿಸಿದ ಸಮಯ: <span id="observedAt"></span></span> 
+  </div>
  <!-- main banner -->
  <section class="bgimage" id="home">
   <div class="container-fluid">
