--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- font awesome -->
   <script src="https://kit.fontawesome.com/31149d48b0.js" crossorigin="anonymous"></script>
+<style>
+    #wdOut{
+      display:flex;
+      justify-content: flex-end;
+    }
+    #wd {
+      text-align: right;
+      border: 1px solid red;
+      background-color: #fcf795;
+      width: 50%;
+}
+   
+  </style>
+  
 </head>
 
 <body>
@@ -44,6 +58,7 @@
     </div>
 </nav>
 <div style="color: black;" id="catFact"></div>
+  <div id="wdOut">
   <div id="wd">
   <div id="place"></div>
 <div id="state"></div>
@@ -52,6 +67,7 @@
  <span>ಆರ್ದ್ರತೆ: <span id="humidity"></span></span><br>
  <span> ನಿರೀಕ್ಷಿಸಿದ ಸಮಯ: <span id="observedAt"></span></span> 
   </div>
+      </div>
  <!-- main banner -->
  <section class="bgimage" id="home">
   <div class="container-fluid">
