--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     #wd {
       text-align: right;
       border: 1px solid red;
+      border-radius: 50%;
       background-color: #fcf795;
       width: 50%;
 }
