--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
     }
     #wd {
-      text-align: right;
+      text-align: 200px;
       border: 1px solid red;
       background-color: #fcf795;
       width: 50%;
