--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         
     }
     #wd {
-      text-align: 500px;
+      text-align: center;
       border: 1px solid red;
       background-color: #fcf795;
       width: 50%;
-       border-radius: 50%;
+       border-radius: 40%;
 }
    
   </style>
