--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         
     }
     #wd {
-      text-align: center;
+      text-align:500px;
       border: 1px solid red;
       background-color: #fcf795;
-      width: 50%;
-       border-radius: 40%;
+      width: 30%;
+       border-radius: 50%;
 }
    
   </style>
