--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
         
     }
     #wd {
-      text-align:500px;
+      text-align:center;
       border: 1px solid red;
       background-color: #fcf795;
-      width: 30%;
+      width: 25%;
        border-radius: 50%;
+      height: 150px
 }
    
   </style>
